--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <img src="BurnPool (4).png" alt="Dual Duck Logo" class="logo-img">
             <h1>Dual Duck</h1>
         </div>
-        <a href="https://twitter.com/placeholder" target="_blank" class="social-link">TWITTER / X</a>
+        <a href="https://x.com/DualDuckSOL" target="_blank" class="social-link">TWITTER / X</a>
     </header>
 
     <main>
@@ -429,4 +429,5 @@
         animate();
     </script>
 </body>
+
 </html>
